# impulse-private

./: CMakeLists.txt  ConsoleApplication2.sln  main.cpp
ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters
ConsoleApplication2/data/: ex4data1_y.txt
ConsoleApplication2/src/Data/: DataSetManager.h
ConsoleApplication2/src/Impulse/: Math.h
ConsoleApplication2/src/Impulse/Data/: DataSet.h  DataSetManager.h  DataSetSample.h
ConsoleApplication2/src/Impulse/Layer/: AbstractLayer.h  HiddenLayer.h  InputLayer.h  OutputLayer.h  Purelin.h  PurelinLayer.h
ConsoleApplication2/src/Impulse/Math/: FmincgMy.cpp  FmincgMy.h  Matrix.h  Vector.h
ConsoleApplication2/src/Impulse/Network/: Network.h  NetworkBuilder.h  NetworkSerializer.h  NetworkTrainer.cpp  NetworkTrainer.h
ConsoleApplication2/src/Impulse/Neuron/: AbstractNeuron.h  BiasNeuron.h  InputNeuron.h  Neuron.h
ConsoleApplication2/src/Layer/: AbstractLayer.h  HiddenLayer.h
ConsoleApplication2/src/Math/: Matrix.h  Vector.h
ConsoleApplication2/src/Network/: NetworkBuilder.h  NetworkTrainer.h
ConsoleApplication2/src/Neuron/: AbstractNeuron.h  InputNeuron.h
ConsoleApplication2/src/tjungblut-math-cpp/: DenseVector.cpp  Fmincg.cpp
data/: ex4data1_y.txt
gradient_pro/: Problem.cpp  Problem.h
src/Impulse/Data/: DataSet.h  DataSetManager.h
src/Impulse/Layer/: AbstractLayer.h  HiddenLayer.h  InputLayer.h  OutputLayer.h  PurelinLayer.h
src/Impulse/Math/: Matrix.h
src/Impulse/Math/Minimizer/: Fmincg.cpp  Fmincg.h
src/Impulse/Network/: Network.h  NetworkBuilder.h  NetworkSerializer.h  NetworkTrainer.cpp  NetworkTrainer.h
src/Impulse/NeuralNetwork/: Network.h  NetworkSerializer.h
src/Impulse/NeuralNetwork/Builder/: AbstractBuilder.h  ClassificationBuilder.h  RegressionBuilder.h
src/Impulse/NeuralNetwork/Data/: DataSetSample.h
src/Impulse/NeuralNetwork/Layer/: AbstractLayer.h  InputLayer.h  LogisticLayer.h  OutputLayer.h  PurelinLayer.h
src/Impulse/NeuralNetwork/Math/Minimizer/: Fmincg.cpp  Fmincg.h
src/Impulse/NeuralNetwork/Network/: Network.h  NetworkBuilder.h  NetworkSerializer.h  NetworkTrainer.cpp  NetworkTrainer.h
src/Impulse/NeuralNetwork/Neuron/: AbstractNeuron.h  BiasNeuron.h  InputNeuron.h  LinearNeuron.h
src/Impulse/NeuralNetwork/Trainer/: AbstractTrainer.cpp  AbstractTrainer.h  ClassificationTrainer.h  RegressionTrainer.h
src/Impulse/Neuron/: AbstractNeuron.h  BiasNeuron.h  InputNeuron.h  SigmoidNeuron.h
